# ogawa-rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release.toml
.github/workflows/: ci.yaml
apps/curve-parsing/: Cargo.toml
apps/curve-parsing/src/: main.rs
apps/curves-test-vis/: Cargo.toml
apps/curves-test-vis/src/: main.rs
apps/print-tree/: Cargo.toml
apps/print-tree/src/: main.rs
apps/schema-parsing/: Cargo.toml
apps/schema-parsing/src/: main.rs
examples/: print-tree.rs
src/: chunks.rs  cp_reader.rs  lib.rs  main.rs  metadata.rs  object_reader.rs  pod.rs  reader.rs  result.rs  time_sampling.rs
src/property/: array_reader.rs  compound_reader.rs  compound_reader.rs.bak  mod.rs  scalar_reader.rs
src/schemas/: base_geom_schema.rs  curves_schema.rs  mod.rs  polymesh_schema.rs  xform_schema.rs
test_assets/: .gitignore
