[package]
name = "ogawa-rs"
version = "0.3.0"
authors = ["Traverse Research <info@traverseresearch.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Ogawa Alembic Cache file parser."
homepage = "https://github.com/Traverse-Research/ogawa-rs"
repository = "https://github.com/Traverse-Research/ogawa-rs"
keywords = ["ogawa", "alembic"]

include = ["/src"]

[dependencies]
anyhow = "1.0"
byteorder = "1.4.3"
half = "2.1.0"
memmap2 = "0.5.8"
thiserror = "1.0"

[workspace]
members = [
    "apps/schema-parsing",
    "apps/print-tree",
    "apps/curves-test-vis",
]
