[package]
name = "ogawa-rs"
version = "0.4.0"
authors = ["Traverse Research <info@traverseresearch.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ogawa Alembic Cache file parser."
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/ogawa-rs"
keywords = ["ogawa", "alembic"]
categories = ["parser-implementations", "rendering:data-formats"]

include = ["/src", "/LICENSE-MIT", "/LICENSE-APACHE"]

[dependencies]
anyhow = "1.0.1"
byteorder = "1.3.2"
half = "2"
memmap2 = "0.5"
thiserror = "1.0.7"

[workspace]
members = [
    "apps/schema-parsing",
    "apps/print-tree",
    "apps/curves-test-vis",
]
