[package]
name = "curves-test-vis"
version = "0.1.0"
authors = ["Max Oomen <max@traverseresearch.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogawa-rs = { path = "../.." }
minifb = { version = "0.19", default-features = false, features = ["x11"] }
thiserror = "1.0"
glam = "0.9"